css/stylesheet.css
@import url('https://fonts.googleapis.com/css?family=Playfair+Display');

@font-face {
	font-family: "GothamMedium";
	src: url("GothamMedium.otf");
}
@font-face {
	font-family: "GothamBook";
	src: url("GothamBook.otf");
}

h1 {
	font-size: 150px;
}
h2{
    font-family:GothamMedium;
    font-size: 70px;
}
h3 {
	font-size: 40px;
	font-family: 'Playfair Display', serif;
}

a {
	font-family: GothamMedium;
}
h4{
	font-family:GothamMedium;
	font-size: 30px;
}
h5{
	font-family:GothamBook;
	font-size: 22px;
}
h6{
	font-family: GothamBook;
	font-size: 13px;
}
p{
	font-family: GothamBook;
	font-size: 20px;
}

.hackCvilleLogo{
    width: 40px;
    height: auto;
    margin-top: -5px;
    margin-left: 5vw;
}
.navbar{
    background-color: white;
    margin-bottom: 0;
}
.applyButton{
    margin-top: -6px;
}
.nav li{
    margin-top: 5px;
    margin-left: 2vw;
}
.navbar-right{
    margin-right: 5vw;
}
.hero-image {
	background-image: url("../images/header.png");
	background-color: #3187c8;
	width: 100%;
	height: 600px;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	position: relative;
	margin: 0 auto;
	opacity: 0.8;
}

.hero-text {
	text-align: center;
	position: absolute;
	top: 50%;
	left: 50%;
	color: white;
	transform: translate(-50%, -50%);
    color: white;
    font-family: GothamMedium;
}

#hero-title {
	text-shadow: 5px 5px #09ffe7;
}

/*#title-offset {
	text-align: center;
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-49%, -79%);
	color: #09ffe7;
	z-index: -1;
    font-family: GothamMedium;
}*/
.about_subtitle{
    text-align: center;
    margin-top: 4vh;
}
.about_subtitle h2{
    margin-top: -4px;
}
.image{
    width:600px;
    height: 480px;
	/*width: 16vw;
	height: 27vh;*/
	background-size: cover;
	display: inline-block;
	z-index: -3;
	position: relative;
}
.imageOneSpecific{
	background-image:url("../images/aboutImageOne.png");
	z-index: -1;
}
.aboutText{
	display: inline-block;
	width: 35%;
	vertical-align: top;
	margin-top: 120px;
	text-align: left;
}
.firstTextSpecific{
	margin-left: 4vw;
}
.aboutHolder{
	text-align: center;
	margin-top: 50px;
}
.secondTextSpecific{
	margin-right: 4vw;
}
.imageTwoSpecific{
	background-image:url("../images/premiereEdit.png");
}
.aboutHolderTwo{
	margin-top: 80px;
}
.quoteSet{
	border: 2px solid black;
	width: 480px;
	height: 220px;
	z-index: 4;
	margin-top: 380px;
	margin-left:-50px;
}
.quoteSet h5{
	width:90%;
	margin-left: auto;
	margin-right: auto;
	margin-top: 30px;
	text-align: left;
}
.tealOffSet{
	width: 480px;
	height: 220px;
	z-index: -2;
	background-color: #09ffe7;
	margin-top: -210px;
	margin-left: -40px;
	position: relative;

}
.quoteSet h6{
	margin-top: -10px;
}
.phoneSecondImage{
	display: none;
}
.CCspecific{
	background-image:url("../images/cc.png");
	z-index: -3;
	display: inline-block;
}
.instructors{
	text-align: center;
}
.CCtext{
	margin-left: 4vw;
	display: inline-block;
	width: 60%;
	vertical-align: top;
	margin-top: 55px;
	text-align: left;
}
.CCtext h5{
	font-size: 30px;
}
.ccimage{
	width:300px;
    height: 280px;
	/*width: 16vw;
	height: 27vh;*/
	background-size: cover;
	display: inline-block;
	z-index: -3;
	position: relative;
}
.ccPhotoTextHolder{
	margin-top: 20px;
}
.CCworkLink{
	font-size: 20px;
	color:#3187c8;
}
.ccBlackRectangle{
	border: 3px solid black;
	width: 180px;
	height: 50px;
	margin-top: 255px;
	margin-left:120px;
	position: relative;
}
.ccBlackRectangle h4{
	margin-top: 2px;
}
.ccTealRectangle{
	width: 177px;
	height: 47px;
	background-color: #09ffe7;
	margin-left: 115px;
	margin-top: -55px;
}
.ceciliaSpecific{
	background-image:url("../images/fillerPerson.png");
	z-index: -3;
	display: inline-block;
	background-size: cover;
}


/* -------------------------- animation stuff im trying -------------------------- */

.cmn-t-pulse {
  color: #fff;
  background-color: #09ffe7;
  animation: pulse 1s ease infinite;
  /* transition: transform 0.2s; */
}
.cmn-t-pulse:hover {
  color: #fff;
  background-color: #3187c8;
}
@keyframes pulse {
  0% {
    transform: scale(1);
  }

  50% {
    transform: scale(1.1);
  }

  100% {
    transform: scale(1);
  }
}

/* ^^^ -------------------------- animation stuff im trying -------------------------- ^^^ */ 
@media screen and (max-width: 1100px) {
	.image{
		width:400px;
    	height: 280px;
	}
	.quoteSet{
		margin-top: 200px;
		width: 340px;
		height: 140px;
	}
	.quoteSet h5{
		font-size: 14px;
		margin-top:10px;
	}
	.quoteSet h6{
		font-size: 12px;
		margin-top: -18px;
	}
	.tealOffSet{
		width: 340px;
		height: 140px;
		margin-top: -130px;
	}
	.aboutText{
		margin-top: -14px;
	}
	.CCtext h5{
		font-size: 20px;
		margin-top: -50px;
	}
	.CCtext{
		width: 40%;
	}
}
@media screen and (max-width: 800px) {
	h1 {
		font-size: 90px;
	}
	#title-offset {
		transform: translate(-49%, -80%);
	}
	.aboutText h4{
		font-size: 18px;
	}
	.aboutText p{
		font-size: 16px;
	}
	.firstTextSpecific{
		margin-left: 0;
	}
	.secondTextSpecific{
		margin-right: 0;
	}

}
@media screen and (max-width: 710px) {
	.imageOneSpecific{
		width:100%;
	}
	.firstTextSpecific{
		width:100%;
		margin-top: 55px;
	}
	.quoteSet{
		margin-top: 205px;
		/*width: 270px;*/
		width: auto;
		height: 140px;
		margin-right: auto;
		margin-left: auto;
		border: none;
		border: 2px solid black;
	}
	.quoteSet h5{
		font-size: 3vw;
		margin-top:28px;
	}
	.quoteSet h6{
		font-size: 2.5vw;
		margin-top: -25px;
	}
	.tealOffSet{
		margin-right: auto;
		margin-left: auto;
		/*width: 270px;
		height: 140px;*/
		height: 140px;
		width: auto;
		margin-top: -130px;
	}
	.imageTwoSpecific{
		width:100%;
	}
	.secondTextSpecific{
		width:100%;
		margin-top: 25px;
	}
	.aboutHolder{
		margin-top: 35px;
	}
	.phoneSecondImage{
		display: inline-block;
	}
	.hideWhenMobile{
		display: none;
	}
	.ccimage{
		width: 100%;
	}
	.CCtext{
		width:100%;
		margin-top:100px;
	}
	.ccBlackRectangle{
		margin-left: auto;
		margin-right: auto;
	}
	.ccTealRectangle{
		margin-left: auto;
		margin-right: auto;
	}

}
@media screen and (max-width: 700px) {
	h1 {
		font-size: 40px;
	}
	h3 {
		font-size: 15px;
	}
	#hero-title {
		text-shadow: 2px 2px #09ffe7;
		
	}
	.hero-image {
		height: 300px;
	}
}
@media screen and (max-width: 600px) {
	.about_subtitle h2{
		font-size: 10vw;
	}

}

